[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "cfonts>=1.5.2",
    "crypto>=1.4.1",
    "flask>=3.1.2",
    "protobuf>=6.33.4",
    "protobuf-decoder>=0.4.0",
    "psutil>=7.2.1",
    "pycryptodome>=3.23.0",
    "pyjwt>=2.10.1",
    "python-cfonts>=1.5.2",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "urllib3>=2.6.3",
]
